--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-torch>=2.0.0
-timm>=0.6.13
-pillow>=9.0.0
+# Core libraries
+torch>=2.0
+timm>=0.9.2
+torchvision>=0.16.0
+Pillow>=10.0.0
+opencv-python>=4.8.0.76
+imagehash>=4.3.1
 exifread>=3.0.0
-imagehash>=4.3
-opencv-python>=4.5.0
 pyheif>=0.6.0
+argparse ; python_version<'3.7'  # Optional; argparse is built-in from Python 3.7+
